crates/lang/macro/tests/ui/selector_bytes/fail/non_literal_parameter.rs
use ink_lang as ink;

const INPUT: &str = "test";
const _: u32 = ink::selector_bytes!(INPUT);

fn main() {}
